# Speakify

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  quickstart.py  run_production.bat  run_production.sh  server.js
scripts/: speakify_helpers.py
src/speakify/: __init__.py  app.py  main.py  pdf_handler.py  speech_synthesizer.py
src/speakify/static/: index.html  main.js  script.js  settings.html  settings.js  style.css
tests/: test_main.py
