[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speakify"
version = "0.1.0"
description = "PDF to Speech Application - Convert PDFs to audio using Flask and Text-to-Speech"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Your Name" }]
dependencies = [
  "flask>=3.0.0",
  "pyttsx3>=2.90",
  "PyPDF2>=3.0.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5.0",
  "black>=24.4.2",
  "mypy>=1.10",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q --cov=src/speakify --cov-report=term-missing"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "src"
packages = ["speakify"]
